@@ -2,6 +2,7 @@ Revision history for Music-FretboardDiagram
 
 {{$NEXT}}
     - Add the spec_to_notes() method.
+    - Fix the position logic for sets of chords and in the _note_at() method.
 
 0.1314 2022-07-17 07:31:25
     - Enhance eg/d-based...
